# fly-server

./: CMakeLists.txt  README.md  Version.h.in  protocmake.cmake
cache/: CMakeLists.txt  MemoryCache.cpp  MemoryCache.h
database/: BindMysqlToLua.h  BindRedisToLua.h  CMakeLists.txt  DBManager.h  HiredisInclude.h  MysqlDefine.h  MysqlManager.cpp  MysqlManager.h  MysqlTask.cpp  MysqlThread.cpp  RedisDefine.h  RedisManager.cpp  RedisManager.h  RedisTask.cpp  RedisThread.cpp  Task.h  TaskPool.h  TaskThread.h
doc/: f-server.doc
http/: CMakeLists.txt  ConnectionPool.cpp  ConnectionPool.hpp  HttpConnection.cpp  HttpConnection.hpp  HttpHeader.hpp  HttpReply.cpp  HttpReply.hpp  HttpRequest.hpp  HttpServer.cpp  HttpServer.hpp  RequestHandler.cpp  RequestHandler.hpp  RequestParser.cpp  RequestParser.hpp  http.hpp
http/moo-http/: GKHttp.vcxproj  GKHttp.vcxproj.filters  Http2.cpp  Http2.h  mongoose.c  pch.h
log/: CMakeLists.txt  MyLog.cpp  MyLog.h
luatinker/: CMakeLists.txt  lua_tinker.cpp  lua_tinker.h
message/: CMakeLists.txt  GateS2C.pb.cc  GateS2C.pb.h  GateS2C.proto  LoginC2S.pb.cc  LoginC2S.pb.h  LoginC2S.proto  LoginResultS2C.pb.cc  LoginResultS2C.pb.h  LoginResultS2C.proto  PlayerDataS2C.pb.cc  PlayerDataS2C.pb.h  PlayerDataS2C.proto  PlayerExitS2S.pb.cc  PlayerExitS2S.pb.h  PlayerExitS2S.proto  PlayerKickS2C.pb.cc  PlayerKickS2C.pb.h  PlayerKickS2C.proto  QueryGateStateLG2GT.pb.cc  QueryGateStateLG2GT.pb.h  QueryGateStateLG2GT.proto  ServerRegisterS2S.pb.cc  ServerRegisterS2S.pb.h  ServerRegisterS2S.proto  ServerStopS2C.pb.cc  ServerStopS2C.pb.h  ServerStopS2C.proto  protocal_all.h
net/: CMakeLists.txt  NetCore.h  NetManager.cpp  NetManager.h  NetMessage.cpp  NetMessage.h  NetObject.h  NetService.cpp  NetService.h  NetSession.h  NetThread.h  NetUV.h
pbc-master/: CMakeLists.txt  pbc-lua.h  pbc.vcxproj  pbc.vcxproj.filters
pbc-master/src/: pbc-lua53.c
pbs/: registerPb.lua
project/: ShareLibrary.sln  cache.vcxproj  cache.vcxproj.filters  database.vcxproj  database.vcxproj.filters  http.vcxproj  http.vcxproj.filters  log.vcxproj  log.vcxproj.filters  luaplus.vcxproj  luaplus.vcxproj.filters  luatinker.vcxproj  luatinker.vcxproj.filters  message.vcxproj  net.vcxproj  net.vcxproj.filters  pbc.vcxproj  pbc.vcxproj.filters  server.vcxproj  server.vcxproj.filters  test.vcxproj  utility.vcxproj  utility.vcxproj.filters
server/: CMakeLists.txt  FannyServer.cpp  FannyServer.h  NetTypeDefine.h  ServerBase.cpp  ServerBase.h  TemplateServer.h  TypeDefine.cpp  TypeDefine.h  Version.h
test/: CMakeLists.txt  TeskClient.cpp  TeskClient.h  main.cpp  sort_bitmap.cpp
third/: leveldb-windows.rar  pbc.rar
third/include/mysql/include/: my_config.h  mysql_version.h
third/include/redis/Win32_Interop/: win32_wsiocp.c
third/include/redis/hiredis/: hiredis.h  net.c
third/libs/debug/: hiredis.lib  lua.lib
third/libs/release/: hiredis.lib
third/redis-win-3.0.300-alpha3/msvs/: redis.conf
third/redis-win-3.0.300-alpha3/src/: anet.c  cluster.c  debug.c  rdb.c  redis-check-dump.c  replication.c
third/redis-win-3.0.300-alpha3/src/Win32_Interop/: Win32_FDAPI.cpp  Win32_FDAPI.h
tool/: CMakeLists.txt  CreatePbsForLua.bat  c++Protobuf - 副本.bat  c++Protobuf.bat  libxl-3.1破解版 (1).rar  pbs.lua  test.xlsx
tool/packtool/conver/: CreateC++.bat  CreatePbsForLua.bat  lua-pbc.rar  run.bat  test.xls
tool/packtool/conver/common/: main.lua
tool/packtool/conver/cpps/: AchievementConditionConfig.pb.cc  AchievementConditionConfig.pb.h  AchievementConfig.pb.cc  AchievementConfig.pb.h  ActivityConfig.pb.cc  ActivityConfig.pb.h  Activity_RebateConfig.pb.cc  Activity_RebateConfig.pb.h  Activity_stageConfig.pb.cc  Activity_stageConfig.pb.h  AllConfigs.cpp  AllConfigs.h  Arena_BuffConfig.pb.cc  Arena_BuffConfig.pb.h  Arena_RankConfig.pb.cc  Arena_RankConfig.pb.h  Arena_RewardConfig.pb.cc  Arena_RewardConfig.pb.h  Arena_TopConfig.pb.cc  Arena_TopConfig.pb.h  AttrTypeConfig.pb.cc  AttrTypeConfig.pb.h  AttributeTipsConfig.pb.cc  AttributeTipsConfig.pb.h  AutoBattleInitDataConfig.pb.cc  AutoBattleInitDataConfig.pb.h  Bank_levelup_timeConfig.pb.cc  Bank_levelup_timeConfig.pb.h  BattleConfig.pb.cc  BattleConfig.pb.h  BattleHelpConfig.pb.cc  BattleHelpConfig.pb.h  BattleInitDataConfig.pb.cc  BattleInitDataConfig.pb.h  BattleThemeConfig.pb.cc  BattleThemeConfig.pb.h  BonusEmailConfig.pb.cc  BonusEmailConfig.pb.h  BossInitDataConfig.pb.cc  BossInitDataConfig.pb.h  (+234 more)
tool/packtool/conver/data/: AllConfigs.lua  data.pack
tool/packtool/conver/excel/: Achievement.xls  Activity.xls  ActivityCommodity.xls  Activity_Mission.xls  Activity_consume_money.xls  Activity_rebate.xls  Activity_stage.xls  Arena_activity.xls  Awardcode.xls  BonusEmail.xls  BossEvent.xls  Charcter.xls  Cost.xls  Course.xls  Daily_signup.xls  Ernie.xls  Help.xls  Item.xls  Item_exchange.xls  Liveness.xls  Market.xls  Mine.xls  Mission.xls  Moneytree.xls  PVP_Rank_Match.xls  Pvp_battle.xls  Recharge_max.xls  Resource.xls  Robot.xls  ShareBonus.xls  Stage.xls  System_notice.xls  System_open.xls  Talent.xls  Vip.xls  Worldview.xls  check.xls  enum.xls  friend.xls  notice.xls  (+2 more)
tool/packtool/conver/lua/: Unit.lua  _GEnum.lua  _GGobalDefine.lua  _GTableType.lua
tool/packtool/conver/proto/: AchievementConditionConfig.pb  AchievementConditionConfig.proto  AchievementConfig.pb  AchievementConfig.proto  ActivityConfig.pb  ActivityConfig.proto  Activity_RebateConfig.pb  Activity_RebateConfig.proto  Activity_stageConfig.pb  Activity_stageConfig.proto  Arena_BuffConfig.pb  Arena_BuffConfig.proto  Arena_RankConfig.pb  Arena_RankConfig.proto  Arena_RewardConfig.pb  Arena_RewardConfig.proto  Arena_TopConfig.pb  Arena_TopConfig.proto  AttrTypeConfig.pb  (+251 more)
tool/packtool/libxl/: IBookT.h  libxl.h  libxl.lib
tool/packtool/packtool/: BasicExcel.cpp  BasicExcel.hpp  ExcelEx.h  LoadExcelData.cpp  LoadExcelData.h  MapTemplate.h  main.cpp  packtool.vcxproj  packtool.vcxproj.filters
utility/: CMakeLists.txt  FastSort.h  MapTemplate.h  MyJson.cpp  MyJson.h  StringUtility.cpp  StringUtility.h  TimeEvent.cpp  TimeEvent.h  TimeInterface.cpp  TimeInterface.h
(+3 files in other folders)
