File(GLOB PROTOBUF_FILES *.proto)
SET(SOURCE_PROTOCAL)
SET(PROTO_PATH ${CMAKE_SOURCE_DIR}/message)
IF(UNIX)
SET(PROTO_TOOL protoc)
ELSE(UNIX)
SET(PROTO_TOOL ${CMAKE_SOURCE_DIR}/tool/protoc.exe)
ENDIF(UNIX)
FOREACH(protofile ${PROTOBUF_FILES})
  STRING(REGEX REPLACE "(.*).proto$" "\\1.pb.cc" GEN_CC ${protofile})
  ADD_CUSTOM_COMMAND(
    OUTPUT ${GEN_CC}
    COMMAND ${PROTO_TOOL} -I${PROTO_PATH} --cpp_out=${PROTO_PATH} ${protofile}
    DEPENDS ${protofile}
  )
  SET(SOURCE_PROTOCAL ${SOURCE_PROTOCAL} ${GEN_CC})
ENDFOREACH()
SET(PB_HEAD "protocal_all.h")
FIND_FILE(FIND_CREATE_ALL_HEADER  ${PB_HEAD} ${PROTO_PATH} NO_DEFAULT_PATH)
IF(NOT FIND_CREATE_ALL_HEADER)
  File(WRITE ${PB_HEAD} "#ifndef __ALL_PROTOCAL_H__\n")
  FILE(APPEND ${PB_HEAD} "#define __ALL_PROTOCAL_H__\n")
  FILE(APPEND ${PB_HEAD} "#ifdef _MSC_VER\n#include <windows.h>\n#include \"google/protobuf/stubs/common.h\"\n#endif\n")
  File(GLOB HEAD_FILES *.pb.h)
  FOREACH(headFile ${HEAD_FILES})
	 FILE(APPEND ${PB_HEAD} "#include \"message\\${headFile}\"\n")
  ENDFOREACH()
  FILE(APPEND ${PB_HEAD} "#endif")
ENDIF()
ADD_LIBRARY(message STATIC ${SOURCE_PROTOCAL})
